Mass update for the 5.0.7 release. Check release notes for more detail